--- a/JBPruebaAngular/src/app/dashboard/dashboard.component.html
+++ b/JBPruebaAngular/src/app/dashboard/dashboard.component.html
@@ -25,8 +25,8 @@
         </div>
       
         <div class="card-body">
-          <a href="#" class="btn btn-primary">Eliminar</a>
-        </div>
+          <a href="#" class="btn btn-primary"  (click)="eliminar(Gif.id)">Eliminar</a>
+        </div> 
       </div>
     </div>
   </div>
